# rust-copt-solver

./: Cargo.toml  LICENSE  README.md  rustfmt.toml
copt-sys/: Cargo.toml  README.md  build.rs
copt-sys/src/: lib.rs
src/: attribute.rs  callback.rs  env.rs  error.rs  expr.rs  lib.rs  model.rs  param.rs  util.rs
